# the-muser

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_LICENSES.md  docker-compose.yml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: lint.yml  test.yml
demos/: README.md  example_session.txt
docs/: legal.md
scripts/: autogen_loop.py  batch_generate_acestep.py  create_training_dataset.py  curate_and_release.py  feminize_voice.py  finetune_orchestrator.py  post_process_batch.py  prepare_diffsinger_dataset.py  preprocess_voice.py  recording_session.py  setup_environment.sh  setup_models.sh  start_muser.sh  train_acestep_lora.sh  train_diffsinger.sh  train_rvc.sh
src/: cli.py
src/audio/: audio_validator.py  effects.py  export.py  fluidsynth_renderer.py  midi_extractor.py  mixer.py  player.py  postproduction.py  sfizz_renderer.py
src/curation/: __init__.py  analyzer.py  config.py  corpus_profiler.py  deduplicator.py  mastering.py  metadata.py  models.py  packager.py  report.py  selector.py
src/curation/dimensions/: __init__.py  artifacts.py  clipping.py  edge_clicks.py  evolution.py  frequency_balance.py  harmony.py  loudness.py  phase.py  rhythm.py  silence.py  stereo_mix.py  structure.py
src/generation/: acestep_wrapper.py  diffsinger_wrapper.py  notagen_wrapper.py
src/notation/: format_converter.py  score_renderer.py  theory_validator.py
src/orchestrator/: agent.py  composition_state.py  config.py  hierarchical_planner.py  llm_provider.py  session_logger.py  system_prompt.py  tool_definitions.py  tool_executor.py  tool_validators.py
src/utils/: git_manager.py  logging.py  model_manager.py
src/voice/: demucs_wrapper.py  rvc_wrapper.py  seedvc_wrapper.py  voice_registry.py
src/web/: app.py
tests/: conftest.py  test_agent_integration.py  test_curation_dimensions.py  test_curation_pipeline.py  test_diffsinger_wrapper.py  test_environment.py  test_generators.py  test_hierarchical_planner.py  test_integration.py  test_llm_provider.py  test_new_tools.py  test_ollama_tools.py  test_orchestrator.py  test_renderers.py  test_session_logger.py  test_v15_and_voice.py  test_validators.py  test_voice.py  test_voice_integration.py
